<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="#3C91E6">

        <ImageView
            android:layout_width="130dp"
            android:layout_height="134dp"
            android:src="@drawable/washing_clothes"
            android:layout_gravity="center"
            android:contentDescription="@string/machine" />
    </FrameLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="UserName"
        android:autofillHints="12dp"
        android:inputType="text" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/password"
        android:autofillHints="12dp"
        android:inputType="text" />
    <Button
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/login"
        android:backgroundTint="#3C91E6"
        />

</LinearLayout>