<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LayananCusetActivity2"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/frame_layanancuset"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="#3C91E6">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginVertical="13dp"
            android:text="@string/layanan3"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="40sp" />
    </FrameLayout>
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_layanancuset"
            android:layout_width="80dp"
            android:layout_height="90dp"
            android:layout_marginStart="40dp">

            <ImageView
                android:id="@+id/gambar_cuset"
                android:layout_width="60dp"
                android:layout_height="80dp"
                android:layout_marginHorizontal="10dp"
                android:src="@drawable/steam_iron"
                android:contentDescription="@string/description" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_layanancucisetrika"
            android:layout_width="80dp"
            android:layout_height="90dp"
            android:layout_marginStart="6dp">

            <ImageView
                android:id="@+id/gambar_cucisetrika"
                android:layout_width="60dp"
                android:layout_height="80dp"
                android:layout_marginHorizontal="10dp"
                android:src="@drawable/washing_machine"
                android:contentDescription="@string/description" />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/card_layanancucikering"
            android:layout_width="80dp"
            android:layout_height="90dp"
            android:layout_marginStart="6dp">

            <ImageView
                android:id="@+id/gambar_cucikering"
                android:layout_width="60dp"
                android:layout_height="80dp"
                android:layout_marginHorizontal="10dp"
                android:src="@drawable/t_shirt"
                android:contentDescription="@string/description" />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/card_layanancucilipat"
            android:layout_width="80dp"
            android:layout_height="90dp"
            android:layout_marginStart="6dp">

            <ImageView
                android:id="@+id/gambar_cucilipat"
                android:layout_width="60dp"
                android:layout_height="80dp"
                android:layout_marginHorizontal="10dp"
                android:src="@drawable/folding_clothes_1_"
                android:contentDescription="@string/description" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <TextView
        android:id="@+id/layanan2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginVertical="10dp"
        android:text="@string/layanancuset"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="30sp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_money"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="10dp">

        <ImageView
            android:id="@+id/gambar_money"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="12dp"
            android:src="@drawable/banknotespaymentmoney_billetesdebanco_pag_3773"
            android:contentDescription="@string/description" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="130dp"
            android:text="@string/harga"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="30sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_waktu"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="10dp">

        <ImageView
            android:id="@+id/gambar_waktu"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="12dp"
            android:src="@drawable/waktu"
            android:contentDescription="@string/description" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="125dp"
            android:text="@string/waktu"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="30sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_berat"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="10dp"
        tools:ignore="DuplicateIds">

        <ImageView
            android:id="@+id/gambar_berat"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="12dp"
            android:src="@drawable/balancescales_121690"
            android:contentDescription="@string/description" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="110dp"
            android:text="@string/berat"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="30sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_ongkir"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="10dp">

        <ImageView
            android:id="@+id/gambar_ongkir"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="12dp"
            android:src="@drawable/_615755_box_delivery_express_parcel_postman_scooter_service_107909"
            android:contentDescription="@string/description" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="110dp"
            android:text="@string/ongkir"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="30sp" />
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/button_next"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/next"
        android:textSize="20sp"
        android:backgroundTint="#3C91E6"
        />

</LinearLayout>