<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    android:background="#ffffff"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/frame_home"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="#3C91E6">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:text="@string/home"
            android:textAlignment="center"
            android:textSize="40sp"
            android:textColor="@color/white"
            android:layout_marginVertical="13dp"
            />

    </FrameLayout>

    <TextView
        android:id="@+id/welcome_teks"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginVertical="13dp"
        android:text="@string/welcome_kelompok_e"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="26sp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/budayakan_malas_mencuci"
        android:textAlignment="center"
        android:textColor="#A7A2A9"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/layout_teks"
        android:layout_width="190dp"
        android:layout_height="38dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="33dp"
        android:textSize="26sp"
        android:textColor="@color/black"
        android:text="@string/layanan" />

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="168dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_setrika"
            android:background="#ffffff"
            android:layout_width="141dp"
            android:layout_height="150dp"
            android:layout_marginStart="23dp">

            <ImageView
                android:layout_width="89dp"
                android:layout_height="96dp"
                android:layout_marginHorizontal="26dp"
                android:src="@drawable/ironing"
                android:contentDescription="@string/description" />

            <Button
                android:id="@+id/setrika"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="110dp"
                android:text="Setrika"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:backgroundTint="#3C91E6">

            </Button>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:background="#ffffff"
            android:id="@+id/card_cucisetrika"
            android:layout_width="141dp"
            android:layout_height="150dp"
            android:layout_marginStart="75dp">

            <ImageView
                android:id="@+id/gambar_cucisetrika"
                android:layout_width="89dp"
                android:layout_height="96dp"
                android:layout_marginHorizontal="26dp"
                android:src="@drawable/washing_machine"
                android:contentDescription="@string/description" />

            <Button
                android:id="@+id/cuset"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="110dp"
                android:text="Cuci Setrika"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:backgroundTint="#3C91E6">

            </Button>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <androidx.cardview.widget.CardView
            android:background="#ffffff"
            android:id="@+id/card_cucikering"
            android:layout_width="141dp"
            android:layout_height="150dp"
            android:layout_marginStart="23dp"
            >

            <ImageView
                android:id="@+id/gambar_cucikering"
                android:layout_width="89dp"
                android:layout_height="96dp"
                android:layout_marginHorizontal="26dp"
                android:src="@drawable/drying"
                android:contentDescription="@string/description" />
            <Button
                android:id="@+id/cuker"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="110dp"
                android:text="Cuci Kering"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:backgroundTint="#3C91E6">

            </Button>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:background="#ffffff"
            android:id="@+id/card_cucilipat"
            android:layout_width="141dp"
            android:layout_height="150dp"
            android:layout_marginStart="75dp"
            >
            <ImageView
                android:id="@+id/gambar_cucilipat"
                android:layout_width="89dp"
                android:layout_height="96dp"
                android:layout_marginHorizontal="26dp"
                android:src="@drawable/folding_clothes"
                android:contentDescription="@string/description" />
            <Button
                android:id="@+id/culit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="110dp"
                android:text="Cuci Lipat"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:backgroundTint="#3C91E6">

            </Button>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

</LinearLayout>